--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" href="./main.css" /> -->
-    <title>React App</title>
+    <title>Instant Article | Share instantly</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
